--- a/templates/admin/reparticion/show.html.twig
+++ b/templates/admin/reparticion/show.html.twig
@@ -8,8 +8,8 @@
       <div class="x_panel">
         <div class="x_title">
             <h2 class="title-page">Repartición ID: {{ reparticion.id }}</h2>            
-            <a class="btn btn-primary btn-sm float-right" style="margin-right:15px;" href="{{ path('index_reparticion') }}">
-              <i class="fa fa-mail-reply"></i> &nbsp; Volver al listado
+            <a class="btn btn-primary btn-sm float-right" style="margin-right:15px;" href="{{ app.request.headers.get('referer') }}">
+              <i class="fa fa-mail-reply"></i> &nbsp; Volver atrás
             </a>
             <a class="btn btn-primary btn-sm float-right" href="{{ path('edit_reparticion',{"id":reparticion.id}) }}">
               <i class="fa fa-edit"></i> &nbsp; Editar
