--- a/templates/admin/roles/new.html.twig
+++ b/templates/admin/roles/new.html.twig
@@ -8,8 +8,8 @@
                 <div class="x_panel">
                     <div class="x_title">
                         <h2 class="title-page">Roles</h2>
-						<a class="btn btn-primary btn-sm float-right" style="margin-right:15px;" href="{{ path('index_roles') }}">
-							<i class="fa fa-mail-reply"></i> &nbsp; Volver al listado
+						<a class="btn btn-primary btn-sm float-right" style="margin-right:15px;" href="{{ app.request.headers.get('referer') }}">
+							<i class="fa fa-mail-reply"></i> &nbsp; Volver atrás
 						</a>
                         <div class="clearfix"></div>
                     </div>
