--- a/templates/admin/bars.html.twig
+++ b/templates/admin/bars.html.twig
@@ -2,7 +2,7 @@
 {% block bars %}
     <div class="col-md-3 left_col menu_fixed">
         <div class="left_col scroll-view">
-            <div class="navbar nav_title">
+            <div class="navbar nav_title" style="border-bottom: 1px solid white;">
                 <div class="title-page-side" >
                     <div id="title-page">
                         {{ site_name }}
