--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -79,7 +79,7 @@
 
 						<div class="clearfix"></div>
 						{% if error %}
-							<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+							<div class="alert alert-danger">Usuario y/o contraseña incorrectos</div>
 						{% endif %}
 					</form>
 				</section>
