suspender y cambiar contraseña a un usuario

--- a/templates/admin/params/changeMdpForm.html.twig
+++ b/templates/admin/params/changeMdpForm.html.twig
@@ -17,7 +17,7 @@
                         <div class="ln_solid"></div>
                         <div class="item form-group">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                <a class="btn btn-warning" href="{{ path('app_admin_index') }}">Cancelar</a>
+                                <a class="btn btn-secondary" href="{{ path('app_admin_index') }}">Cancelar</a>
                                 <button type="submit" name="valider" class="btn btn-success">Guardar</button>
                             </div>
                         </div>
