--- a/templates/admin/user/user.html.twig
+++ b/templates/admin/user/user.html.twig
@@ -1,138 +1,128 @@
-{% extends "admin/bars.html.twig" %}
+{% extends "base/index.html.twig" %}
 
-{% block contenpage %}
-    <div class="">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2 class="title-page">Lista de usuarios</h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            <li>
-								<a href="{{ path('app_admin_new_user') }}" class="btn btn-success-custom">
-                                    <i class="fa fa-plus"></i> &nbsp; Nuevo
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="clearfix"></div>
-                    </div>
+{% block headerMain %}
+    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <h1 class="h3 mb-0 text-gray-800">Lista de usuarios</h1>
+        <div class="align-items-center justify-content-end">
+            <a href="{{ path('app_admin_new_user') }}" class="d-md-inline-block btn btn-sm btn-primary shadow-sm">
+            <i class="fa fa-plus"></i> &nbsp; Nuevo
+        </a>
+        </div>        
+    </div>
+{% endblock %}
 
-                    {{ include('admin/user/_filtro.html.twig', {'form': formFiltro}) }}
+{% block rowMain %}
+    <div class="col">
 
-                    <div class="x_content">
-                        <div class="row">
-                            <div class="table-responsive">
-                                <table id="example" class="display table table-hover" >
-                                    {# Títulos de tabla #}
-                                    <thead>
-                                        {# SUSPENDIDO #}
-                                        <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;" width="100px">
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                {{ knp_pagination_sortable(pagination, 'Activo', 'e.suspended') }}
-                                                {% if pagination.getSort == 'e.suspended' and pagination.getDirection == 'asc' %}
-                                                    <i class="fa fa-level-up"></i>
-                                                {% elseif pagination.getSort == 'e.suspended' and pagination.getDirection == 'desc' %}
-                                                    <i class="fa fa-level-down"></i>
-                                                {% endif %}
-                                            </div>
-                                        </th>
-                                        {# ID #}
-                                        <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;" width="100px">
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                {{ knp_pagination_sortable(pagination, 'ID', 'e.id') }}
-                                                {% if pagination.getSort == 'e.id' and pagination.getDirection == 'asc' %}
-                                                    <i class="fa fa-level-up"></i>
-                                                {% elseif pagination.getSort == 'e.id' and pagination.getDirection == 'desc' %}
-                                                    <i class="fa fa-level-down"></i>
-                                                {% endif %}
-                                            </div>
-                                        </th>
-                                        {# Nombre #}
-                                        <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                {{ knp_pagination_sortable(pagination, 'Nombre', 'e.nombre') }}
-                                                {% if pagination.getSort == 'e.nombre' and pagination.getDirection == 'asc' %}
-                                                    <i class="fa fa-level-up"></i>
-                                                {% elseif pagination.getSort == 'e.nombre' and pagination.getDirection == 'desc' %}
-                                                    <i class="fa fa-level-down"></i>
-                                                {% endif %}
-                                            </div>
-                                        </th>
-                                        {# Username #}
-                                        <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                {{ knp_pagination_sortable(pagination, 'Usuario', 'e.username') }}
-                                                {% if pagination.getSort == 'e.username' and pagination.getDirection == 'asc' %}
-                                                    <i class="fa fa-level-up"></i>
-                                                {% elseif pagination.getSort == 'e.username' and pagination.getDirection == 'desc' %}
-                                                    <i class="fa fa-level-down"></i>
-                                                {% endif %}
-                                            </div>
-                                        </th>
-                                        {# Email #}
-                                        <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                {{ knp_pagination_sortable(pagination, 'Email', 'e.email') }}
-                                                {% if pagination.getSort == 'e.email' and pagination.getDirection == 'asc' %}
-                                                    <i class="fa fa-level-up"></i>
-                                                {% elseif pagination.getSort == 'e.email' and pagination.getDirection == 'desc' %}
-                                                    <i class="fa fa-level-down"></i>
-                                                {% endif %}
-                                            </div>
-                                        </th>
-                                        <th class="btn-table-width text-center" style="cursor: auto;">
-                                            Acciones
-                                        </th>
-                                    </thead>
-                                    {# FIN Títulos de tabla #}
+        {{ include('admin/user/_filtro.html.twig', {'form': formFiltro}) }}
 
-                                    <tbody>
-                                        {% for user in pagination %}
-                                            <tr>
-                                                <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">
-                                                    {% if user.suspended %}
-                                                        <i class="fa fa-minus-square text-danger"></i>
-                                                    {% else %}
-                                                        <i class="fa fa-check-square text-success"></i>
-                                                    {% endif %}
-                                                </td>
-                                                <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.id }}</td>
-                                                <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.nombre }}</td>
-                                                <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.username }}</td>
-                                                <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.email }}</td>
-                                                <td class="btn-cell-table align-middle">
-                                                    <a class="btn btn-primary btn-sm btn-table-margin mt-1 mb-1" alt="Editar" href="{{ path('app_admin_edit_user',{"id":user.id}) }}">
-                                                        <i class="fa fa-edit"></i>
-                                                    </a>
-                                                    <a class="btn btn-danger btn-sm btn-table-margin mt-1 mb-1" title="Eliminar registro" href="javascript:void(0)" data-toggle="modal" data-target="#modalEliminar{{user.id}}">
-                                                        <i class="fa fa-trash"></i>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div> 
-
-                            {# Pagination #}
-                            <div class="row justify-content-between m-0 w-100 mt-2">
-                                <div class="col-4">
-                                    <div class="d-flex mb-2 mb-md-0 d-inline-flex">
-                                        {{ pagination.getTotalItemCount }} {{ pagination.getTotalItemCount == 1 ? " registro" : " registros" }} en total
-                                    </div>
-                                </div>
-                                <div class="col-4 text-right">
-                                    <div class="d-inline-flex align-items-end">
-                                        {{ knp_pagination_render(pagination) }}
-                                    </div>
-                                </div>
-                            </div>
-                            {# END Pagination #}                           
+        <div class="table-responsive mt-3">
+            <table class="display table table-hover" >
+                {# Títulos de tabla #}
+                <thead>
+                    {# SUSPENDIDO #}
+                    <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;" width="80px">
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'Activo', 'e.suspended') }}
+                            {% if pagination.getSort == 'e.suspended' and pagination.getDirection == 'asc' %}
+                                <i class="fa fa-level-up"></i>
+                            {% elseif pagination.getSort == 'e.suspended' and pagination.getDirection == 'desc' %}
+                                <i class="fa fa-level-down"></i>
+                            {% endif %}
                         </div>
-                    </div>
+                    </th>
+                    {# ID #}
+                    <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;" width="80px">
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'ID', 'e.id') }}
+                            {% if pagination.getSort == 'e.id' and pagination.getDirection == 'asc' %}
+                                <i class="fa fa-level-up"></i>
+                            {% elseif pagination.getSort == 'e.id' and pagination.getDirection == 'desc' %}
+                                <i class="fa fa-level-down"></i>
+                            {% endif %}
+                        </div>
+                    </th>
+                    {# Nombre #}
+                    <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'Nombre', 'e.nombre') }}
+                            {% if pagination.getSort == 'e.nombre' and pagination.getDirection == 'asc' %}
+                                <i class="fa fa-level-up"></i>
+                            {% elseif pagination.getSort == 'e.nombre' and pagination.getDirection == 'desc' %}
+                                <i class="fa fa-level-down"></i>
+                            {% endif %}
+                        </div>
+                    </th>
+                    {# Username #}
+                    <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'Usuario', 'e.username') }}
+                            {% if pagination.getSort == 'e.username' and pagination.getDirection == 'asc' %}
+                                <i class="fa fa-level-up"></i>
+                            {% elseif pagination.getSort == 'e.username' and pagination.getDirection == 'desc' %}
+                                <i class="fa fa-level-down"></i>
+                            {% endif %}
+                        </div>
+                    </th>
+                    {# Email #}
+                    <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'Email', 'e.email') }}
+                            {% if pagination.getSort == 'e.email' and pagination.getDirection == 'asc' %}
+                                <i class="fa fa-level-up"></i>
+                            {% elseif pagination.getSort == 'e.email' and pagination.getDirection == 'desc' %}
+                                <i class="fa fa-level-down"></i>
+                            {% endif %}
+                        </div>
+                    </th>
+                    <th class="btn-table-width text-center" style="cursor: auto;" width="100px">
+                        Acciones
+                    </th>
+                </thead>
+                {# FIN Títulos de tabla #}
+
+                <tbody>
+                    {% for user in pagination %}
+                        <tr>
+                            <td class="align-middle td-cursor text-center" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">
+                                {% if user.suspended %}
+                                    <i class="fa fa-minus-square text-danger"></i>
+                                {% else %}
+                                    <i class="fa fa-check-square text-success"></i>
+                                {% endif %}
+                            </td>
+                            <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.id }}</td>
+                            <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.nombre }}</td>
+                            <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.username }}</td>
+                            <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.email }}</td>
+                            <td class="btn-cell-table align-middle text-center">
+                                <a class="btn btn-primary btn-sm btn-table-margin mt-1 mb-1" alt="Editar" href="{{ path('app_admin_edit_user',{"id":user.id}) }}">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+                                <a class="btn btn-danger btn-sm btn-table-margin mt-1 mb-1" title="Eliminar registro" href="javascript:void(0)" data-toggle="modal" data-target="#modalEliminar{{user.id}}">
+                                    <i class="fa fa-trash"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div> 
+
+        {# Pagination #}
+        <div class="row justify-content-between m-0 w-100 mt-2">
+            <div class="col-4">
+                <div class="d-flex mb-2 mb-md-0 d-inline-flex">
+                    {{ pagination.getTotalItemCount }} {{ pagination.getTotalItemCount == 1 ? " registro" : " registros" }} en total
+                </div>
+            </div>
+            <div class="col-4 text-right">
+                <div class="d-inline-flex align-items-end">
+                    {{ knp_pagination_render(pagination) }}
                 </div>
             </div>
         </div>
+        {# END Pagination #}
     </div>
 {% endblock %}
 
